force-app/main/default/objects/Case/fields/Building_Problems__c.field-meta.xml
<CustomField>
    <fullName>Building_Problems__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Building Notes</label>
    <referenceTo>PBS_AAAP_Offer__c</referenceTo>
    <relationshipLabel>Building Notes</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>