force-app/main/default/objects/Case/fields/GSA_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>GSA_Contact_Email__c</fullName>
    <label>GSA Contact Email</label>
    <type>Email</type>
</CustomField>