force-app/main/default/objects/Case/fields/GSA_Inbox__c.field-meta.xml
<CustomField>
    <fullName>GSA_Inbox__c</fullName>
    <defaultValue>&quot;g-rex.file@gsa.gov&quot;</defaultValue>
    <description>GSA generic email for all Case Submissions</description>
    <label>GSA Inbox</label>
    <type>Email</type>
</CustomField>