force-app/main/default/objects/Case/fields/Lease_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Lease_Effective_Date__c</fullName>
    <formula>PBS_Lease__r.Lease_Effective_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lease Effective Date</label>
    <type>Date</type>
</CustomField>