force-app/main/default/objects/Case/fields/Lease_Location_ID__c.field-meta.xml
<CustomField>
    <fullName>Lease_Location_ID__c</fullName>
    <label>Lease Location ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>