force-app/main/default/objects/Case/fields/Lease_Number__c.field-meta.xml
<CustomField>
    <fullName>Lease_Number__c</fullName>
    <formula>PBS_Lease__r.Lease_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lease Number</label>
    <type>Text</type>
</CustomField>