force-app/main/default/objects/Case/fields/Lessor__c.field-meta.xml
<CustomField>
    <fullName>Lessor__c</fullName>
    <formula>PBS_Lease__r.Lessor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lessor</label>
    <type>Text</type>
</CustomField>