force-app/main/default/objects/Case/fields/Other_Agency_Name__c.field-meta.xml
<CustomField>
    <fullName>Other_Agency_Name__c</fullName>
    <label>Other Agency Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>