force-app/main/default/objects/Case/fields/PBS_AAAP_Property__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Property__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Property</label>
    <referenceTo>PBS_AAAP_Property__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>