force-app/main/default/objects/Case/fields/PBS_Building__c.field-meta.xml
<CustomField>
    <fullName>PBS_Building__c</fullName>
    <formula>PBS_Lease__r.PBS_Building__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PBS Building</label>
    <type>Text</type>
</CustomField>