force-app/main/default/objects/Case/fields/PBS_Lease__c.field-meta.xml
<CustomField>
    <fullName>PBS_Lease__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Associated lease for real estate tax submissions.</description>
    <inlineHelpText>Associated lease for real estate tax submissions.</inlineHelpText>
    <label>PBS Lease</label>
    <referenceTo>PBS_Lease__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>