force-app/main/default/objects/Case/fields/RET_Base_Tax_Year__c.field-meta.xml
<CustomField>
    <fullName>RET_Base_Tax_Year__c</fullName>
    <description>Real Estate Tax submission base tax year.</description>
    <inlineHelpText>Real Estate Tax submission base tax year.</inlineHelpText>
    <label>RET Base Tax Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>