force-app/main/default/objects/Case/fields/RET_Editable_by_Submitter__c.field-meta.xml
<CustomField>
    <fullName>RET_Editable_by_Submitter__c</fullName>
    <description>Indicates if this case should display with fields editable by the submitter.</description>
    <formula>OR(
NOT(ISPICKVAL(Status, &apos;Determination Made&apos;))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates if this case should display with fields editable by the submitter.</inlineHelpText>
    <label>RET Editable by Submitter</label>
    <type>Checkbox</type>
</CustomField>