force-app/main/default/objects/Case/fields/RET_Initial_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>RET_Initial_Submission_Date__c</fullName>
    <description>Indicates the first time a Real Estate Tax submission has been sent to GSA.</description>
    <inlineHelpText>Indicates the first time a Real Estate Tax submission has been sent to GSA.</inlineHelpText>
    <label>RET Initial Submission Date</label>
    <type>DateTime</type>
</CustomField>