force-app/main/default/objects/Case/fields/RET_Last_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>RET_Last_Submission_Date__c</fullName>
    <description>Indicates the most recent date a Real Estate Tax submission was sent to GSA.</description>
    <inlineHelpText>Indicates the most recent date a Real Estate Tax submission was sent to GSA.</inlineHelpText>
    <label>RET Last Submission Date</label>
    <type>DateTime</type>
</CustomField>