force-app/main/default/objects/Case/fields/RET_Submission_Comments__c.field-meta.xml
<CustomField>
    <fullName>RET_Submission_Comments__c</fullName>
    <label>RET Submission Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>