force-app/main/default/objects/Case/fields/RET_Tax_County__c.field-meta.xml
<CustomField>
    <fullName>RET_Tax_County__c</fullName>
    <label>RET Tax County</label>
    <length>255</length>
    <type>Text</type>
</CustomField>