force-app/main/default/objects/Case/fields/State_Code__c.field-meta.xml
<CustomField>
    <fullName>State_Code__c</fullName>
    <formula>PBS_Lease__r.Building_State_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Building State Code</label>
    <type>Text</type>
</CustomField>