force-app/main/default/objects/Case/fields/Street_Address_1__c.field-meta.xml
<CustomField>
    <fullName>Street_Address_1__c</fullName>
    <formula>PBS_Lease__r.Building_Street_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Building Address 1</label>
    <type>Text</type>
</CustomField>