force-app/main/default/objects/Case/fields/Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code__c</fullName>
    <formula>PBS_Lease__r.Building_Zip_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Building Zip Code</label>
    <type>Text</type>
</CustomField>