force-app/main/default/objects/Case/recordTypes/Real_Estate_Taxes.recordType-meta.xml
<RecordType>
    <fullName>Real_Estate_Taxes</fullName>
    <active>true</active>
    <businessProcess>RET</businessProcess>
    <label>Real Estate Taxes</label>
</RecordType>