force-app/main/default/objects/Case/listViews/AAAP_Web_to_Case_Case.listView-meta.xml
<ListView>
    <fullName>AAAP_Web_to_Case_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>AAAP Web-to-Case</label>
    <queue>AAAP_Web_to_Case</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>