force-app/main/default/objects/Case/listViews/AllCases.listView-meta.xml
<ListView>
    <fullName>AllCases</fullName>
    <filterScope>Everything</filterScope>
    <label>All Cases</label>
</ListView>