force-app/main/default/objects/Case/listViews/RET_Cases.listView-meta.xml
<ListView>
    <fullName>RET_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>PBS_Lease__c</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Real_Estate_Taxes</value>
    </filters>
    <label>RET Cases</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>